--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Misterio del Libro Oculto</title>
+    <title>El Libro Oculto</title>
     <style>
         :root {
             --primary-color: #8B0000;
@@ -132,11 +132,10 @@
     <script type='text/javascript' src='//filthygracefulspinach.com/41/0a/1c/410a1c60d11615a09f26b1bd5bdf2774.js'></script>
     
     <div class="container">
-        <h1>El Misterio del Libro Oculto</h1>
-        <p>
+        <h1>El Libro Oculto</h1>
+       <p>
             <span class="emoji">🕯️</span> En las sombras de este sitio se esconde un secreto... <span class="emoji">📘</span><br><br>
-            Múltiples portales se presentan ante ti, cada uno llevándote a un destino desconocido... pero solo uno revelará el libro prohibido. Con cada elección equivocada, un portal desaparecerá en la oscuridad.<br><br>
-            ¿Podrás descifrar el enigma antes de que la última luz se extinga? <span class="emoji">🔍</span><br><br>
+            En este sitio web hay varios botones, cada uno te lleva a un destino diferente... pero solo uno de ellos te permitirá descargar el libro. Cada vez que presionas un botón incorrecto, este desaparecerá, acercándote más a la respuesta correcta.<br><br>            ¿Podrás descifrar el enigma antes de que la última luz se extinga? <span class="emoji">🔍</span><br><br>
             Adéntrate en el misterio y pon a prueba tu intuición... <span class="emoji">🌑</span>
         </p>
     </div>
